--- a/07-discussion.Rmd
+++ b/07-discussion.Rmd
@@ -8,10 +8,16 @@ Discussion of the results.
 
 ## Associations
 
+...
+
 ### Versions
 
 ...
 
 ### Church Fathers
+
+...
+
+## The quest for the initial text
 
 ...
