--- a/ANTTV.bib
+++ b/ANTTV.bib
@@ -1,5 +1,6 @@
 
 @book{alan_bowman_settlement_2018,
+	address = {Oxford},
 	title = {Settlement, {Urbanization}, and {Population}},
 	url = {https://global.oup.com/academic/product/settlement-urbanization-and-population-9780198788515?cc=au&lang=en&#},
 	abstract = {1:Introduction, A. Bowman \& A. Wilson
@@ -23,8 +24,7 @@ Urbanization
 }
 
 @book{parker_introduction_2008,
-	address = {Cambridge, UK ; New York},
-	edition = {Illustrated edition},
+	address = {Cambridge},
 	title = {An {Introduction} to the {New} {Testament} {Manuscripts} and their {Texts}},
 	isbn = {978-0-521-71989-6},
 	language = {English},
@@ -36,7 +36,7 @@ Urbanization
 
 @book{metzger_text_2005,
 	address = {New York},
-	edition = {4th edition},
+	edition = {4th ed.},
 	title = {The {Text} of the {New} {Testament}: {Its} {Transmission}, {Corruption}, and {Restoration}},
 	isbn = {978-0-19-516122-9},
 	shorttitle = {The {Text} of the {New} {Testament}},
@@ -49,13 +49,78 @@ Urbanization
 
 @book{aland_text_1995,
 	address = {Grands Rapids},
-	edition = {2nd Revised ed. edition},
+	edition = {2nd rev. ed.},
 	title = {The {Text} of the {New} {Testament}: {An} {Introduction} to the {Critical} {Editions} and to the {Theory} and {Practice} of {Modern} {Textual} {Criticism}},
 	isbn = {978-0-8028-4098-1},
 	shorttitle = {The {Text} of the {New} {Testament}},
 	language = {English},
 	publisher = {Eerdmans},
 	author = {Aland, Kurt and Aland, Barbara},
+	translator = {Rhodes, Erroll F.},
 	month = mar,
 	year = {1995},
+}
+
+@book{vaganay_introduction_1991,
+	address = {Cambridge},
+	title = {An {Introduction} to {New} {Testament} {Textual} {Criticism}},
+	isbn = {978-0-521-36433-1},
+	abstract = {This book comprises a general survey of the study of New Testament manuscripts, and outlines for students of the New Testament the basic tools and skills involved in studying those manuscripts. The present edition is a thoroughly revised and updated version of Leon Vaganay's Initiation á la critique du Nouveau Testament, published in 1933, and each section of that original work has been brought up to date in light of the latest research in the field. In its aim to provide a solid foundation to study of New Testament textual criticism, this comprehensive survey will be of great value to those who are looking for basic information about the subject; while the documentary information it contains about the extant manuscripts, and its original theoretical sections, will ensure that the book has much of value to offer the more advanced student of the New Testament.},
+	language = {English},
+	publisher = {Cambridge University Press},
+	author = {Vaganay, Leon and Amphoux, Christian-Bernard},
+	translator = {Heimerdinger, Jenny},
+	month = nov,
+	year = {1991},
+}
+
+@book{elliott_manuscripts_1995,
+	address = {Edinburgh},
+	title = {Manuscripts and the {Text} of the {New} {Testament}: {An} {Introduction} for {English} {Readers}},
+	isbn = {978-0-567-29298-8},
+	shorttitle = {Manuscripts and the {Text} of the {New} {Testament}},
+	abstract = {A practical primer on the New Testament and its sources, written for those without previous knowledge of the subject or of Greek.},
+	language = {English},
+	publisher = {T\&T Clark},
+	author = {Elliott, Keith and Moir, Ian},
+	year = {1995},
+}
+
+@book{hurtado_earliest_2006,
+	address = {Grand Rapids},
+	title = {Earliest {Christian} {Artifacts}: {Manuscripts} and {Christian} {Origins}},
+	isbn = {978-0-8028-2895-8},
+	shorttitle = {Earliest {Christian} {Artifacts}},
+	abstract = {Much attention has been paid to the words of the earliest Christian canonical and extracanonical texts, yet Larry Hurtado points out that an even more telling story is being overlooked -- the story of the physical texts themselves. Widely recognized for his outstanding scholarship, Hurtado combines his comprehensive knowledge of Christian origins with an archivist's eye to make sense of these earliest objects of the faith. He introduces readers to the staurogram, possibly the first representation of the cross, the nomina sacra, a textual abbreviation system, and the puzzling Christian preference for book-like texts over scrolls. Drawing on studies by papyrologists and palaeographers as well as New Testament scholars -- and including photographic plates of selected manuscripts -- The Earliest Christian Artifacts astutely introduces the distinctive physical features of early Christian manuscripts, illustrating their relevance for wider inquiry into the complex origins of Christianity.},
+	language = {English},
+	publisher = {Eerdmans},
+	author = {Hurtado, Larry W.},
+	month = nov,
+	year = {2006},
+}
+
+@book{gamble_books_1997,
+	address = {New Haven},
+	title = {Books and {Readers} in the {Early} {Church}: {A} {History} of {Early} {Christian} {Texts}},
+	isbn = {978-0-300-06918-1},
+	shorttitle = {Books and {Readers} in the {Early} {Church}},
+	abstract = {This fascinating and lively book provides the first comprehensive discussion of the production, circulation, and use of books in early Christianity. It explores the extent of literacy in early Christian communities; the relation in the early church between oral tradition and written materials; the physical form of early Christian books; how books were produced, transcribed, published, duplicated, and disseminated; how Christian libraries were formed; who read the books, in what circumstances, and to what purposes.Harry Y. Gamble interweaves practical and technological dimensions of the production and use of early Christian books with the social and institutional history of the period. Drawing on evidence from papyrology, codicology, textual criticism, and early church history, as well as on knowledge about the bibliographical practices that characterized Jewish and Greco-Roman culture, he offers a new perspective on the role of books in the first five centuries of the early church.},
+	language = {English},
+	publisher = {Yale University Press},
+	author = {Gamble, Harry Y.},
+	month = sep,
+	year = {1997},
+}
+
+@book{streeter_four_1930,
+	address = {London},
+	edition = {Rev. ed.},
+	title = {The {Four} {Gospels}: {A} {Study} of {Origins}, {Treating} of the {Manuscript} {Tradition}, {Sources}, {Authorship}, \& {Dates}},
+	isbn = {978-1-55635-797-8},
+	shorttitle = {The {Four} {Gospels}},
+	abstract = {The Four Gospels},
+	language = {English},
+	publisher = {Macmillan},
+	author = {Streeter, Burnett Hillman},
+	year = {1930},
 }
